@@ -1,5 +1,5 @@
 /*
- * Copyright 2016-2022 the original author or authors.
+ * Copyright 2016-2023 the original author or authors.
  *
  * All rights reserved. This program and the accompanying materials are
  * made available under the terms of the Eclipse Public License v2.0 which
@@ -10,14 +10,16 @@
 
 package org.junitpioneer.jupiter.json;
 
+import static java.util.stream.Collectors.groupingBy;
+import static java.util.stream.Collectors.mapping;
+import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.tuple;
 import static org.junitpioneer.testkit.assertion.PioneerAssert.assertThat;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Nested;
@@ -47,9 +49,8 @@ class JsonClasspathSourceArgumentsProviderTests {
 		Map<String, List<String>> displayNames = results
 				.dynamicallyRegisteredEvents()
 				.map(Event::getTestDescriptor)
-				.collect(Collectors
-						.groupingBy(JsonClasspathSourceArgumentsProviderTests::testSourceMethodName,
-							Collectors.mapping(TestDescriptor::getDisplayName, Collectors.toList())));
+				.collect(groupingBy(JsonClasspathSourceArgumentsProviderTests::testSourceMethodName,
+					mapping(TestDescriptor::getDisplayName, toList())));
 
 		assertThat(displayNames)
 				.containsOnlyKeys("singleObject", "singleObjectAttribute", "deconstructObjectsFromArray",
@@ -80,9 +81,8 @@ class JsonClasspathSourceArgumentsProviderTests {
 		Map<String, List<String>> displayNames = results
 				.dynamicallyRegisteredEvents()
 				.map(Event::getTestDescriptor)
-				.collect(Collectors
-						.groupingBy(JsonClasspathSourceArgumentsProviderTests::testSourceMethodName,
-							Collectors.mapping(TestDescriptor::getDisplayName, Collectors.toList())));
+				.collect(groupingBy(JsonClasspathSourceArgumentsProviderTests::testSourceMethodName,
+					mapping(TestDescriptor::getDisplayName, toList())));
 
 		assertThat(displayNames)
 				.containsOnlyKeys("singleObject", "singleObjectProperty", "deconstructObjectsFromArray",
@@ -95,10 +95,6 @@ class JsonClasspathSourceArgumentsProviderTests {
 
 		assertThat(displayNames.get("deconstructObjectsFromArray"))
 				.containsExactly("[1] Luke, 172", "[2] Luke, 66", "[3] Yoda, 172", "[4] Yoda, 66");
-
-		//assertThat(displayNames.get("customDataLocation"))
-		//		.containsExactly("[1] Snowspeeder, 4.5", "[2] Snowspeeder, 3", "[3] Imperial Speeder Bike, 4.5",
-		//			"[4] Imperial Speeder Bike, 3");
 
 		assertThat(displayNames.get("deconstructObjectsFromMultipleFiles"))
 				.containsExactly("[1] 66, Yoda", "[2] 66, Luke", "[3] 172, Yoda", "[4] 172, Luke");
@@ -123,7 +119,7 @@ class JsonClasspathSourceArgumentsProviderTests {
 		@ParameterizedTest
 		@JsonClasspathSource(JEDIS)
 		void singleObject(Jedi jedi) {
-			assertThat(Collections.singleton(tuple(jedi.getName(), jedi.getHeight())))
+			assertThat(Set.of(tuple(jedi.getName(), jedi.getHeight())))
 					.containsAnyOf(tuple("Luke", 172), tuple("Yoda", 66));
 		}
 
@@ -136,27 +132,27 @@ class JsonClasspathSourceArgumentsProviderTests {
 		@ParameterizedTest
 		@JsonClasspathSource(JEDIS)
 		void deconstructObjectsFromArray(@Property("name") String name, @Property("height") int height) {
-			assertThat(Collections.singleton(tuple(name, height))).containsAnyOf(tuple("Luke", 172), tuple("Yoda", 66));
+			assertThat(Set.of(tuple(name, height))).containsAnyOf(tuple("Luke", 172), tuple("Yoda", 66));
 		}
 
 		@ParameterizedTest
 		@JsonClasspathSource(value = LUKE, data = "vehicles")
 		void customDataLocation(@Property("name") String name, @Property("length") double length) {
-			assertThat(Collections.singleton(tuple(name, length)))
+			assertThat(Set.of(tuple(name, length)))
 					.containsAnyOf(tuple("Snowspeeder", 4.5), tuple("Imperial Speeder Bike", 3d));
 		}
 
 		@ParameterizedTest
 		@JsonClasspathSource({ YODA, LUKE, })
 		void deconstructObjectsFromMultipleFiles(@Property("height") int height, @Property("name") String name) {
-			assertThat(Collections.singleton(tuple(name, height))).containsAnyOf(tuple("Luke", 172), tuple("Yoda", 66));
+			assertThat(Set.of(tuple(name, height))).containsAnyOf(tuple("Luke", 172), tuple("Yoda", 66));
 		}
 
 		@ParameterizedTest
 		@JsonClasspathSource({ YODA, LUKE })
 		void deconstructObjectsFromMultipleFilesIntoComplexType(@Property("name") String name,
 				@Property("location") Location location) {
-			assertThat(Collections.singleton(tuple(name, location.getName())))
+			assertThat(Set.of(tuple(name, location.getName())))
 					.containsAnyOf(tuple("Luke", "Tatooine"), tuple("Yoda", "unknown"));
 		}
 
@@ -167,7 +163,7 @@ class JsonClasspathSourceArgumentsProviderTests {
 
 		@CartesianTest
 		void singleObject(@JsonClasspathSource(JEDIS) Jedi jedi) {
-			assertThat(Collections.singleton(tuple(jedi.getName(), jedi.getHeight())))
+			assertThat(Set.of(tuple(jedi.getName(), jedi.getHeight())))
 					.containsAnyOf(tuple("Luke", 172), tuple("Yoda", 66));
 		}
 
